assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Italianno&family=Noto+Serif&family=Playfair+Display:ital,wght@0,500;1,500&display=swap:500,600,700,800,900');

/* ---------------------------------------General */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

h1,
h2,
h3,
h4 {
    font-weight: 700;
}

/* ---------------------------------------Header */

header {
    background-color: rgba(211, 211, 211, 0.8);
}

.header-area {
    background-image: url('../images/baking.jpg');
    height: 150px;
    text-align: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.header-area a {
    text-decoration: none;
}

.header-area a h1 {
    color: #5d0000;
    font-family: Italianno, sans-serif;
    font-size: 100px;

}


body {
    font-family: 'Playfair Display', sans-serif;
    font-weight: 600;
    color: #606160;
}

.nav-area {
    padding: 20px;
}

.nav-area a {
    text-decoration: none;
}

#logo {
    font-size: 150%;
    color: #606160;
    margin-left: 10px;

}

#nav li {
    font-size: 20px;
    text-align: center;
    padding: 5px 0 5px 0;
}


#nav a {
    text-decoration: none;
    color: inherit;
    letter-spacing: 2px;
}

#nav a:hover {
    border-bottom: 1px solid #a3a0a0;
}

.active {
    border-bottom: 1px solid #a3a0a0;
}

.menucontainer {
    font-size: 0;
    margin-bottom: 0;
}

.list-inline-item:not(:last-child) {
    margin: 0;
}


/* --------------------------------------- Home Sections */

.page-backgound {
    height: 100%;
    width: 100%;
    background-image: url('../images/cake-bg-image2.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

#about-us-text {
    background-color: rgba(211, 211, 211, 0.8);
    color: #000;
    font-family: 'Noto Serif', sans-serif;
    font-size: 22px;
    font-weight: 600;
    position: relative;
    padding: 20px;
}

#about-us-text h2 {
    color: inherit;
    border-bottom: 1px solid;
}

#about-us-text p {
    padding: 10px;
}

#about-us-text a {
    color: inherit;
    border-bottom: 1px solid;
}

.about-us-area {
    float: left;
    width: 40%;
    margin: 100px 0 100px 35px;
}

.media img {
    height: 100px;
    width: 100px;
    border-radius: 50%;
}


.blockquote {
    display: block;
    width: 60%;
}

.testimonials {
    padding: 20px;
}

.testimonial blockquote {
    padding: 20px;
}

.testimonials p {
    font-weight: 600;
}

/* --------------------------------------- Gallery Sections */



.gallery-heading {
    padding: 10px 40% 10px 10px;
}

.gallery-heading a {
    color: inherit;
    border-bottom: 1px solid;
}

.gallery-heading p {
    margin-top: 1rem;
}


.gallery-container {
    padding: 20px 0 20px 20px;
}

/* credit: code to show thumnails and border shadow from https://www.w3docs.com/snippets/css/how-to-create-thumbnail-images.html ammended to fit with site colour theme */

.gallery-items img {
    border: 2px solid #C0C0C0;
    padding: 5px;
}

.gallery-items img:hover {
    box-shadow: 5px 4px 10px #606160;
}



/* --------------------------------------- Contact */

.contact-text {
    width: 50%;
    padding: 20px;
    margin: 0 25%;
}

.contact-form {
    padding: 20px 25%;
}

/* credit: Styling and code for from used from Code Institute Love Running page and adjusted to suit */

.text-input {
    font-family: 'Noto Serif', sans-serif;
    color: #fafafa;
    width: 100%;
    height: 25px;
    position: relative;
    margin: 5px 0 20px 0;
    border: 1px solid #606160;
    border-radius: 2px;
}

.signup-form {
    color: #fff;
    background-color: rgba(60, 60, 60, 0.6);
    min-width: 50%;
    padding: 30px;
}

#contact-text-area {
    max-width: 95%;
    font-weight: 400;
    margin-top: 10px;
    margin-bottom: 10px;
}

.signup-form h3 {
    color: #fafafa;
    margin-bottom: 20px;
}

.radio-section {
    padding: 20px 0;
}

.radio-btn {
    font-weight: 400;
}


/* ---------------------------------------Footer */

.footer-area {
    background-color: rgba(211, 211, 211, 0.8);
    padding: 10px 0;
    margin: 0;
}

.where-to-find-us {
    text-transform: uppercase;
    color: inherit;
    width: 100%;
    float: left;
    padding: 10px 0 0 10px;
}

.social-links {
    text-align: center;
    padding-top: 20px;
    
}

.social-area li {
    width: 20%;
    padding: 0;
    margin: 0;
    
}

.social-area li a {
    text-decoration: none;
}

.social-links li a i {
    height: 30px;
    color: #606160;
    font-size: 26px;
    font-family: 'Noto Serif', sans-serif;
    text-align: center;
    
}

.social-links li a span {
    color: #606160;
    font-size: 20px;
    padding: 0 10px 0 10px;
    text-align: center;
}

#facebook i {
    color: #3b5998;
}

#twitter i {
    color: #1DA1F2;
}

#instagram i {
    color: #833AB4;
}

#pinterest i {
    color: #E60023;
}

.bg-color {
    background-color: #fffff9;
}




/* ---------------------------------------Media Queries */

@media screen and (max-width: 992px) {

    #logo {
        text-align: center;
    }

    #menu {
        font-size: 110%;
        list-style-type: none;
        letter-spacing: 4px;
        padding-top: 8px;
    }

    #menu li {
        text-align: center;
        margin-right: 15px;
    }

    .about-us-area {
        width: 60%;
        padding: 20% 10% 20% 10%;
    }

    .social-area li {
        width: 20%;
    }
}

@media screen and (max-width: 768px) {

    #logo {
        padding-top: 20px;
    }

    #about-us-text {
        color: black;
        padding: 20px;
    }

    .about-us-area {
        width: 80%;
        padding: 20% 10% 20% 10%;
    }

    .testimonials {
        margin: 0;
    }

    .testimonial {
        padding-left: 5%;
        margin: 0;
    }

    .blockquote {
        width: 100%;
    }

    .social-area li {
        width: 45%;
    }

    .contact-text {
        width: 70%;
        padding: 20px;
        margin: 0 15%;
    }

    .contact-form {
        padding: 20px 5%;
    }

}



@media screen and (max-width: 576px) {
    .social-area li {
        text-align: center;
    }

    .social-links li a span {
        display: none;
    }

    .about-us-area {
        width: 80%;
        padding: 20% 10% 20% 10%;
        margin: 10%;
    }

    .gallery-items {
        text-align: center;
    }

    .gallery-container h3 {
        text-align: center;
    }

    .gallery-heading {
        padding: 10px;
    }

    .gallery-heading h2 {
        text-align: center;
    }

    #video {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 20px;
}

}

